# black-mata

./: .env.example  .gitignore  README.md  REVIEW.md  build.py  cd_resume.sh  data_structure.txt  data_structure_simple.txt  pyproject.toml  requirements.txt
.github/workflows/: arm.yml  ci.yml  x86.yml
docs/: architecture.html  architecture.txt
docs/software_architecture/: adr.html  architecture.txt  c4.html  c4_components.html  c4_containers.html  c4_context.html  deployment.html  index.html  seq_camera.html  seq_drive.html  seq_telemetry.html  sequences.html
docs/wiring/: edges.csv  nodes.csv  wiring.html  wiring.py
firmware/black_mata_firmware/: LedBlinker.cpp  LedBlinker.h  README.md  black_mata_firmware.ino
firmware/dxl_commander/: dxl_commander.ino
firmware/dxl_id_change/: dxl_id_change.ino
firmware/dxl_id_scan/: dxl_id_scan.ino
firmware/dxl_imu_commander/: dxl_imu_commander.ino
firmware/dxl_python_mode_rw/: dxl_python_mode_rw.ino
firmware/dxl_servo_monitor/: dxl_servo_monitor.ino
firmware/dxl_servo_nudge/: dxl_servo_nudge.ino
firmware/dxl_u2d2_bridge/: dxl_u2d2_bridge.ino
firmware/imu_bno080_spi/: README.md  imu_bno080_spi.ino
firmware/opencm_blink/: opencm_blink.ino
firmware/serial_rw_example/: README.md  serial_rw_example.ino
firmware/spi_scanner/: spi_scanner.ino
scripts/: monitor.py  serial_rw_example.py
software/robot/: ackermann.py  camera.py  estop.py  main.py  serial_driver.py
tests/: test_ackermann.py
tools/ackermann_ui/: server.py
tools/camera/: camera_test.py
tools/dashboard/: server.py
(+23 files in other folders)
