[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "black-mata-remote-update"
version = "0.1.0"
description = "Remote OpenCM flashing utilities (x86 -> ARM over SSH)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Black-Mata Team" }]
dependencies = []
